--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
   },
   "dependencies": {
     "avconv": "~2.0.0",
+    "body-parser": "^1.12.2",
     "chokidar": "^0.10.9",
+    "ejs": "^2.3.1",
+    "express": "^4.12.2",
+    "fs": "0.0.2",
+    "jsonfile": "^2.0.0",
+    "materialize-css": "^0.95.3",
     "winston": "~0.8.1",
     "yargs": "~1.3.2"
   }
